# documentation

./: 404.html  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: gh-pages-deploy.yml
docker/: index.html
docs/: docker.md  env.md  index.md  reverse.md  selfhost.md
docs/txtdot/server/: env.md
env/: index.html
reverse/: index.html
search/: search_index.json
selfhost/: index.html
txtdot/server/: index.html
txtdot/server/docker/: index.html
txtdot/server/env/: index.html
txtdot/server/reverse/: index.html
txtdot/server/selfhost/: index.html
