[tool.poetry]
name = "documentation"
version = "0.1.0"
description = "Documentation for txtdot"
authors = ["darkcat09", "artegoser"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mkdocs = "^1.5.2"
mkdocs-material = "^9.2.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
